Feat: Small improvements, created session with portfolio to view charts. Fixed memory leak in session timer and labels!